force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <label>Expense</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Expense名称</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>