force-app/main/default/objects/Expense__c/fields/eximage__c.field-meta.xml
<CustomField>
    <fullName>eximage__c</fullName>
    <formula>IF( Amount__c &gt; 20, IMAGE(&apos;/servlet/servlet.FileDownload?file=0157F000001NbOm&apos;, &apos;test&apos;,25,25), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>图片</label>
    <type>Text</type>
</CustomField>