force-app/main/default/objects/Expense__c/fields/love__c.field-meta.xml
<CustomField>
    <fullName>love__c</fullName>
    <label>爱好</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>篮球</fullName>
            </value>
            <value>
                <fullName>羽毛球</fullName>
            </value>
            <value>
                <fullName>乒乓球</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>