force-app/main/default/objects/Expense__c/fields/parent__c.field-meta.xml
<CustomField>
    <fullName>parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Expense</relationshipLabel>
    <relationshipName>Expense</relationshipName>
    <type>Lookup</type>
</CustomField>