force-app/main/default/objects/Expense__c/fields/Testcx__c.field-meta.xml
<CustomField>
    <fullName>Testcx__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Testcx</label>
    <length>22</length>
    <type>Text</type>
</CustomField>