force-app/main/default/objects/Expense__c/fields/Testpercent__c.field-meta.xml
<CustomField>
    <fullName>Testpercent__c</fullName>
    <label>Testpercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>