force-app/main/default/objects/Expense__c/fields/TestPickList__c.field-meta.xml
<CustomField>
    <fullName>TestPickList__c</fullName>
    <label>TestPickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>123</fullName>
                <label>AAA</label>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>