force-app/main/default/objects/Expense__c/recordTypes/rr1.recordType-meta.xml
<RecordType>
    <fullName>rr1</fullName>
    <active>true</active>
    <label>rr1</label>
</RecordType>