force-app/main/default/objects/Expense__c/recordTypes/rr2.recordType-meta.xml
<RecordType>
    <fullName>rr2</fullName>
    <active>true</active>
    <label>rr2</label>
</RecordType>