force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
    <language>en_US</language>
</ListView>